FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//////////////////////////////////////////////////////////////////////////

//定义64位无符号长整型
//Define 64bit long integer type
typedef unsigned __int64 QWORD;
//定义下载任务的句柄
//Define downloader handle
typedef LONG *HDownloader;
//代理的类型
//Proxytypes
#define PROXYTYPE_NOPROXY 0
	
	//外部调用, 获取手动设置最大的下载率限制(0.0表示没有限制)
	//Get fixed max download rate
	FTKERNELAPI_API double BTAPI FTK_Downloader_GetFixMaxDownloadRate( HDownloader hDownloader );
	
	//外部调用, 手动设置最大的上传率限制(0.0表示没有限制)
	//Set fixed max upload rate
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetFixMaxUploadRate( HDownloader hDownloader, double fMaxUploadRate = 0.0 );
	
	//外部调用, 获取手动设置最大的上传率限制(0.0表示没有限制)
	//Get fixed max upload rate
	FTKERNELAPI_API double BTAPI FTK_Downloader_GetFixMaxUploadRate( HDownloader hDownloader );
	
	//主动限制某些特定的种子服务器(SEED), 给自己的最大的上传率(0表示没有限制, 注意单位是: KB)
	//Set fixed max upload rate of SOME CERTAIN SEED to me, 0 means no limit, UNIT is KB 
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetSeedMaxUPSpeed( HDownloader hDownloader, unsigned short nSpeed = 0 );
	
	//多少秒中内，禁止某个IP的连接, 只在当前任务存在期间有效
	//Ban IP for X seconds, ONLY for the current active HDownloader 
	FTKERNELAPI_API void BTAPI FTK_Downloader_BanPeerIP( HDownloader hDownloader, const char * lpszIP, UINT nBannedSeconds );
	
	//获取线程的ID
	//Get thread ID
	FTKERNELAPI_API DWORD BTAPI FTK_Downloader_GetThreadID( HDownloader hDownloader );
	
	//////////////////////////////////////////////////////////////////////////
	//全局参数设置
	//Global settings
	
	//将某个Torrent文件的SHA1值加入队列
	//Add torrent into SHA1 list
	FTKERNELAPI_API void BTAPI FTK_GlobalVar_AddTorrentSHA1( const char * lpszSHA1, HDownloader hDownloader );
	
	//将某个Torrent文件的SHA1值从队列中删除
	//Remove torrent from SHA1 list
	FTKERNELAPI_API void BTAPI FTK_GlobalVar_RemoveTorrentSHA1( const char * lpszSHA1 );
	
	//////////////////////////////////////////////////////////////////////////
	//代理服务器函数列表
	//Proxy interface
	
	//设置仅在连接Tracker时使用代理服务器
	//Only tracker using proxy settings
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetOnlyTracker( BOOL bOnlyTracker = FALSE );
	
	//清空当前的代理信息(仅用于PROXYTYPE_NOPROXY)
	//Only PROXYTYPE_NOPROXY
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetType( int nProxyType );
	
	//设置代理(不能是PROXYTYPE_NOPROXY)
	//May not be PROXYTYPE_NOPROXY
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetProxy( int nProxyType, const char * pProxyHost, int ProxyPort );
	
	//设置SOCKS5和HTTP1.1需要认证信息的代理
	//Only SOCKS5 and HTTP1.1 proxies
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetAuthProxy( int nProxyType, const char * pProxyHost, int ProxyPort, const char * pProxyUser, const char * pProxyPass );
	
	//获取代理的类型
	//Return proxy type
	FTKERNELAPI_API int BTAPI FTK_Proxy_GetProxyType();
	
	//获取总共已经下载(验证成功)的数据
	//Get the size of having received data for all file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetTotalFileHaveSize( HDownloader hDownloader );
	
	//获取选择已经下载(验证成功)的数据
	//Get the size of having received data for a file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetSelectedFileHaveSize( HDownloader hDownloader );
	
	//获取已经顺序下载的目前可以从头开始播放的数据长度
	//Get the size of sequential piece from file front
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetStartSeqFileSize( HDownloader hDownloader );
	
	//获取最近一次下载的字节数
	//Get the size of lasted receiving data
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetLastDataSize( HDownloader hDownloader );
	
	//获取总共丢弃的字节数
	//Get the size of bad data
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetBadDataSize( HDownloader hDownloader );
	
	//当前总共的连接的个数
	//Get the number of total peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetTotalPeerCount( HDownloader hDownloader );
	
	//当前主动连接的个数
	//Get the number of active peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetActivePeerCount( HDownloader hDownloader );
	
	//当前的被动连接的个数
	//Get the number of passive peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetPassivePeerCount( HDownloader hDownloader );
	
	//当前正在连接中的个数
	//Get number of connecting peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetConnectingPeerCount( HDownloader hDownloader );
	
	//获取已经连接的种子的个数
	//Get number of seed
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetSeedCount( HDownloader hDownloader );
	
	//获取正在上传的连接的个数
	//Get the number of uploading peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetUploadPeerCount( HDownloader hDownloader );
	
	//获取正在下载的连接的个数
	//Get the number of downloading peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetDownloadPeerCount( HDownloader hDownloader );
	
	//获取总共可以获取的Seed的个数
	//Get the number of total available seed
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetTotalAvailSeedCount( HDownloader hDownloader );
	
	//获取总共可以获取的Peer的个数
	//Get the number of peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetTotalAvailPeerCount( HDownloader hDownloader );
	
	//旧的种子的个数
	//Get old seed number
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetOldSeedPeerCount( HDownloader hDownloader );
	
	//获取是否至少已经有一个Tracker连接成功
	//Is any tracker successfull?
	FTKERNELAPI_API BOOL BTAPI FTK_Stat_IsAnyTrackerOK( HDownloader hDownloader );
	
	//本次运行已经下载的数据长度
	//Get downloaded bytes
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetDownloaded( HDownloader hDownloader );
	
	//本次运行已经上传的数据长度
	//Get uploaded bytes
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetUploaded( HDownloader hDownloader );
	
	//本次已经运行时间(运行时间不同与下载时间)
	//Get total running time
	FTKERNELAPI_API double BTAPI FTK_Stat_GetRunningTime( HDownloader hDownloader );
	
	//本次下载的时间(如果是做种, 则下载时间永远为0)
	//Get total downloaded time
	FTKERNELAPI_API double BTAPI FTK_Stat_GetDownloadTime( HDownloader hDownloader );
	
	//本次下载剩余的时间, 根据下载率计算
	//Get the left time to download
	FTKERNELAPI_API double BTAPI FTK_Stat_GetLeftTime( HDownloader hDownloader );
	
	//获取当前的上传率
	//Get upload rate
	FTKERNELAPI_API double BTAPI FTK_Stat_GetUploadRate( HDownloader hDownloader );
	
	//获取当前的下载率
	//Get downloading rate
	FTKERNELAPI_API double BTAPI FTK_Stat_GetDownloadRate( HDownloader hDownloader );
	
	//获取指定的Piece的下载进度
	//Get the progress of a piece
	FTKERNELAPI_API void BTAPI FTK_Stat_GetPieceState( HDownloader hDownloader, BYTE *pPiece, int nCount );
	
	//获取检查文件的进度
	//Get the progress of cheching piece
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetCheckPieceSize( HDownloader hDownloader );
	
	//获取检查的Piece的个数
	//Get number of checked piece
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetCheckPieceCount( HDownloader hDownloader );