FTKernelAPI_SDK/CSharpDemo/FTKernelAPI.cs


		//外部调用, 获取手动设置最大的下载率限制(0.0表示没有限制)
		//Get fixed max download rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_GetFixMaxDownloadRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Downloader_GetFixMaxDownloadRate( uint hDownloader );

		//外部调用, 获取手动设置最大的上传率限制(0.0表示没有限制)
		//Get fixed max upload rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_SetFixMaxUploadRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_SetFixMaxUploadRate( uint hDownloader, double fMaxUploadRate );

		//外部调用, 获取手动设置最大的上传率限制(0.0表示没有限制)
		//Get fixed max upload rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_GetFixMaxUploadRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Downloader_GetFixMaxUploadRate( uint hDownloader );
	
		//主动限制某些特定的种子服务器(SEED), 给自己的最大的上传率(0表示没有限制, 注意单位是: KB)
		//Set fixed max upload rate of SOME CERTAIN SEED to me, 0 means no limit, UNIT is KB 
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_SetSeedMaxUPSpeed", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Downloader_SetSeedMaxUPSpeed( uint hDownloader, ushort nSpeed );
	
		//多少秒中内，禁止某个IP的连接, 只在当前任务存在期间有效
		//Ban IP for X seconds, ONLY for the current active uint 
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_BanPeerIP", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Downloader_BanPeerIP( uint hDownloader, string sIP, uint nBannedSeconds );
	
		//获取线程的ID
		//Get thread ID
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_GetThreadID", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern uint FTK_Downloader_GetThreadID( uint hDownloader );

		/////////////////////////////////////////////////////////////////////////////////////
		//全局参数设置
		//Global settings

		//将某个Torrent文件的SHA1值加入队列
		//Add torrent into SHA1 list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_GlobalVar_AddTorrentSHA1", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_GlobalVar_AddTorrentSHA1( string sSHA1, uint hDownloader );

		//将某个Torrent文件的SHA1值从队列中删除
		//Remove torrent from SHA1 list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_GlobalVar_RemoveTorrentSHA1", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_GlobalVar_RemoveTorrentSHA1( string sSHA1 );

		/////////////////////////////////////////////////////////////////////////////////////
		//代理服务器函数列表
		//Proxy interface

		//设置仅在连接Tracker时使用代理服务器
		//Only tracker using proxy settings
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Proxy_SetOnlyTracker", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Proxy_SetOnlyTracker( bool bOnlyTracker);
	
		//清空当前的代理信息(仅用于PROXYTYPE_NOPROXY)
		//Only PROXYTYPE_NOPROXY
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Proxy_SetType", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Proxy_SetType( int nProxyType );
	
		//设置代理(不能是PROXYTYPE_NOPROXY)
		//May not be PROXYTYPE_NOPROXY
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Proxy_SetProxy", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Proxy_SetProxy( int nProxyType, string sProxyHost, int ProxyPort );
	
		//设置SOCKS5和HTTP1.1需要认证信息的代理
		//Only SOCKS5 and HTTP1.1 proxies
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Proxy_SetAuthProxy", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Proxy_SetAuthProxy( int nProxyType, string sProxyHost, int ProxyPort, string sProxyUser, string sProxyPass );
	
		//获取代理的类型
		//Return proxy type
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Proxy_GetProxyType", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern int FTK_Proxy_GetProxyType();

		//////////////////////////////////////////////////////////////////////////
		//Downloader statistic information interface

		//获取总共已经下载(验证成功)的数据
		//Get the size of having received data for all file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetTotalFileHaveSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern ulong FTK_Stat_GetTotalFileHaveSize( uint hDownloader );

		//获取选择已经下载(验证成功)的数据
		//Get the size of having received data for a file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetSelectedFileHaveSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetSelectedFileHaveSize( uint hDownloader );
		
		//获取已经顺序下载的目前可以从头开始播放的数据长度
		//Get the size of sequential piece from file front
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetStartSeqFileSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetStartSeqFileSize( uint hDownloader );
		
		//获取最近一次下载的字节数
		//Get the size of lasted receiving data
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetLastDataSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetLastDataSize( uint hDownloader );
		
		//获取总共丢弃的字节数
		//Get the size of bad data
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetBadDataSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetBadDataSize( uint hDownloader );
		
		//当前总共的连接的个数
		//Get the number of total peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetTotalPeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetTotalPeerCount( uint hDownloader );
		
		//当前主动连接的个数
		//Get the number of active peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetActivePeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetActivePeerCount( uint hDownloader );
		
		//当前的被动连接的个数
		//Get the number of passive peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetPassivePeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetPassivePeerCount( uint hDownloader );
		
		//当前正在连接中的个数
		//Get number of connecting peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetConnectingPeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetConnectingPeerCount( uint hDownloader );
		
		//获取已经连接的种子的个数
		//Get number of seed
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetSeedCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetSeedCount( uint hDownloader );
		
		//获取正在上传的连接的个数
		//Get the number of uploading peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetUploadPeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetUploadPeerCount( uint hDownloader );
		
		//获取正在下载的连接的个数
		//Get the number of downloading peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetDownloadPeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetDownloadPeerCount( uint hDownloader );
		
		//获取总共可以获取的Seed的个数
		//Get the number of total available seed
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetTotalAvailSeedCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern uint FTK_Stat_GetTotalAvailSeedCount( uint hDownloader );
		
		//获取总共可以获取的Peer的个数
		//Get the number of peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetTotalAvailPeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern uint FTK_Stat_GetTotalAvailPeerCount( uint hDownloader );
		
		//旧的种子的个数
		//Get old seed number
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetOldSeedPeerCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern uint FTK_Stat_GetOldSeedPeerCount( uint hDownloader );
		
		//获取是否至少已经有一个Tracker连接成功
		//Is any tracker successfull?
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_IsAnyTrackerOK", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern bool FTK_Stat_IsAnyTrackerOK( uint hDownloader );
		
		//本次运行已经下载的数据长度
		//Get downloaded bytes
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetDownloaded", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern ulong FTK_Stat_GetDownloaded( uint hDownloader );
		
		//本次运行已经上传的数据长度
		//Get uploaded bytes
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetUploaded", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern ulong FTK_Stat_GetUploaded( uint hDownloader );
		
		//本次已经运行时间(运行时间不同与下载时间)
		//Get total running time
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetRunningTime", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern double FTK_Stat_GetRunningTime( uint hDownloader );
		
		//本次下载的时间(如果是做种, 则下载时间永远为0)
		//Get total downloaded time
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetDownloadTime", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern double FTK_Stat_GetDownloadTime( uint hDownloader );
		
		//本次下载剩余的时间, 根据下载率计算
		//Get the left time to download
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetLeftTime", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern double FTK_Stat_GetLeftTime( uint hDownloader );

		//获取当前的上传率
		//Get upload rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetUploadRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern double FTK_Stat_GetUploadRate( uint hDownloader );

		//获取当前的下载率
		//Get downloading rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetDownloadRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern double FTK_Stat_GetDownloadRate( uint hDownloader );

		//获取指定的Piece的下载进度
		//Get the progress of a piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetPieceState", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Stat_GetPieceState( uint hDownloader, [MarshalAs(UnmanagedType.LPArray)] byte[] Piece, int nCount );
	
		//获取检查文件的进度
		//Get the progress of cheching piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetCheckPieceSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetCheckPieceSize( uint hDownloader );

		//获取检查的Piece的个数
		//Get number of checked piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetCheckPieceCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern uint FTK_Stat_GetCheckPieceCount( uint hDownloader );
